2005-11-17  Andrew Cagney  <cagney@redhat.com>

	* TestTaskAttachedObserver.java: Delete.  Fold into ...
	* TestTaskObserver.java: Merge in TestTaskAttachedObserver.

2005-11-16  Stam Cox  <scox@redhat.com>

	* Host.java (Host): Add logger.
	(add,remove,removeTasks,get,getProc,requestRefresh,execute)
	(requestRefresh,requestCreateAttachedProc): Add logging.
	* HostState.java (HostState): Add logger.
	(process*): Add logging.
	* LinuxHost.java (LinuxHost): Add logger.
	(sendCreateAttachedProc,PollWaitOnSigChld,waitObserver,forkEvent)
	(exitEvent,execEvent,disappeared,syscallEvent,stopped,terminated):
	Add logging.
	* LinuxProc.java (LinuxProc): Add logger.
	(LinuxProc,sendNewAttachedTask): Add logging.
	* LinuxTask.java (LinuxTask): Add logger.
	(send*): Add logging.
	* Proc.java (Proc): Add logger.
	(execute,add,remove,notify,retain): Add logging.
	* ProcEvent.java (ProcEvent): Add logger.
	(getProc,getProcFromTaskId): Add logging.
	* ProcState.java (ProcState): Add logger.
	(ProcState,isStopped,process*,state): Add logging.
	* Task.java (Task): Add logger.
	(requestStop,request*,execute): Add logging.
	* TaskEvent.java (TaskEvent): Add logger.
	(getTask): Add logging.
	* TaskState.java (TaskState): Add logger.
	(process*): Add logging.

2005-11-11  Jeff Johnston  <jjohnstn@redhat.com>

	* TestSyscallOpen.java: Remove updateSyscallXXX reference.

2005-11-11  Andrew Cagney  <cagney@redhat.com>

	* LinuxX8664.java, LinuxPowerPc.java: Delete.  Re-instate once Isa
	code stable.

2005-11-10  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Delete Child.stopEventLoopOnDestroy.
	* TestStep.java: Replace stopEventLoopOnDestroy with
	StopEventLoopWhenChildProcRemoved.

	* ProcState.java: Delete "stop" variable.  Delete delete states
	.stopped, and .ContinuingAllTasks.

	* TestTaskAttachedObserver.java: Add .testDeletedAttachOtherTask,
	and .testBackToBackAttachDetachOtherTask.
	* ProcState.java (Detaching.state(Proc,Collection): Add.  When